login-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-service
  labels:
    app: login-service
spec:
  selector:
    app: login-service
  ports:
    - port: 80
      targetPort: 8080
      name: http
