login-service/k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: login-service
spec:
  hosts:
    - login-service
  http:
    - route:
        - destination:
            host: login-service
            port:
              number: 80
